Revert "fix: Remove whitespaces, change class name"
This reverts commit c70f93536cf7ed17126f579c20e04f99527bbd9c.

--- a/backend/backend/static/scss/_badge.scss
+++ b/backend/backend/static/scss/_badge.scss
@@ -1,8 +1,8 @@
 .badge {
-  color: $white;
+  color:$white;
 }
 
-.wott-badge-position {
+.badge-position {
   position: absolute;
   top: 9px;
   right: 12px!important;
